CB-28802 - Detect Basic SKU during sync
This commit introduces the SKU field in the StackV4Response.LoadBalancerResponse.AzureLoadBalancerResponse
This is required because we need to detect if a customer still has BASIC LB SKU to notify them properly.